kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gubinnet
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: gubinnet
